<resources>
    <string name="app_name">ProjectMagangLatihan</string>

    //Login
    <string name="lupa_kata_s">Lupa Kata Sandi</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="belum_mempunyai_akun">belum mempunyai akun?</string>
    <string name="daftar">DAFTAR</string>

    //Register
    <string name="kode_perusahaan">Kode Perusahaan</string>
    <string name="id_karyawan">ID Karyawan*</string>
    <string name="nama_lengkap">Nama Lengkap*</string>
    <string name="email">Email*</string>
    <string name="job_desk_departement">Job Desk / Departement*</string>
    <string name="nomor_telepon">Nomor Telepon / Phone*</string>
    <string name="masukkan_password">Masukan Kata Sandi*</string>
    <string name="konfirmasi_password">Konfirmasi Kata Sandi*</string>
    <string name="list_job_desk">List Job Desk</string>

    //Tumbal
    <string name="email_tumbal">Email</string>
    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>

    //Error
    <string name="error">Tidak Boleh Kosong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_maps">HomeMapsActivity</string>


    //Home
    <string name="semoga_hari_mu_menyenangkan">Semoga hari mu menyenangkan</string>
    <string name="lokasi_saya">Lokasi Saya</string>
    <string name="klik_tombol">Klik Tombol</string>
    <string name="absen_sekarang"> ABSEN SEKARANG</string>
    <string name="untuk_memulai_absensi_harian_anda">untuk memulai absensi harian anda</string>
    <string name="username">Username</string>
    <string name="hi">Hi,</string>
    <string name="lihat_absensi_harian">Lihat Absensi harian</string>
    <string name="sudah_absen_hari_ini">Sudah Absen hari ini</string>
    <string name="_68">68</string>
    <string name="tugas_kerja">Tugas Kerja</string>
    <string name="laporan_kerja">Laporan Kerja</string>
    <string name="infromasi_dan_berita">Infromasi dan berita</string>
    <string name="info_tentang_hari_ini">Info tentang hari ini</string>
    <string name="rencana_dan_tiba_tiba">Rencana dan Tiba-tiba</string>
    <string name="saya_ada_rencana_izin">Saya Ada rencana izin</string>
    <string name="rencana_dan">Rencana dan</string>
    <string name="tiba_tiba">Tiba-tiba</string>
    <string name="berita">berita</string>
    <string name="informasi_dan">Informasi dan</string>

    //Profil
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="change_photo">change photo</string>
    <string name="your_name">Your Name</string>
    <string name="job_desk_user">Job Desk User</string>
    <string name="nip">NIP</string>
    <string name="daftarr">Daftar</string>
    <string name="detail_kehadiran_izin_atau_sakit">Detail Kehadiran Izin atau Sakit</string>
    <string name="detail_laporan_kerja">Detail Laporan Kerja</string>
    <string name="perihal_kehadiran">Perihal Kehadiran</string>
    <string name="_1234567890">1234567890</string>
    <string name="buka_kurung">(</string>
    <string name="tutup_kurung">)</string>
    <string name="sangat_baik">Sangat Baik</string>
    <string name="total_keseluruhan_permintaan_izin_sakit_dll">Total Keseluruhan Permintaan izin, sakit, dll</string>
    <string name="perihal_absen">Perihal Absen</string>
    <string name="perihal_izin">Perihal Izin</string>
    <string name="perihal_sakit">Perihal Sakit</string>

    //Edit Profil
    <string name="edit_profil">Edit Profil</string>
    <string name="masukan_id_karyawan">Masukan ID Karyawan</string>
    <string name="masukan_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_job_desk_departement">Masukan Job Desk / Departement</string>
    <string name="masukan_no_telepon">Masukan No Telepon</string>
    <string name="digital_talent_scholarship_2021">Digital Talent Scholarship 2021</string>
    <string name="info_berita"><![CDATA[Info & Berita]]></string>
    <string name="detail_info">Detail Info</string>
    <string name="alasan_izin">Alasan Izin</string>
    <string name="membuat_izin">Membuat Izin</string>


    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Recognition</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="ok">OK</string>
    <string name="id_karyawann">ID Karyawan</string>
    <string name="daftar_tugas_kerja">Daftar Tugas Kerja</string>
    <string name="dev">DEV</string>
    <string name="title_tugas_kerja">Title Tugas Kerja</string>

    //Spinner Bulan - Informasi Dan Berita Activity
    <string-array name="this_month">
        <item>This Month</item>
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

</resources>