<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfilActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_layer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/llEtProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/back_top"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="25dp"
                        android:text="@string/edit_profil"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llEtProfil">

                    <EditText
                        android:id="@+id/etIdKaryawan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_input_etprofil"
                        android:hint="@string/masukan_id_karyawan"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/etNama"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_input_etprofil"
                        android:hint="@string/masukan_nama_lengkap"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_input_etprofil"
                        android:hint="@string/masukan_email"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/etJobDesk"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_input_etprofil"
                        android:hint="@string/masukan_job_desk_departement"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:inputType="textEmailAddress"/>

                    <EditText
                        android:id="@+id/etNotelp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_input_etprofil"
                        android:hint="@string/masukan_no_telepon"
                        android:paddingStart="15dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:inputType="number"/>


                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnSimpan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_simpan"
                        android:layout_marginTop="50dp"/>


                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnGantiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/btn_ganti_password"/>


                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>