<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/Viewselamatdatang"
            android:layout_width="319dp"
            android:layout_height="74dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/selamatdatang" />

        <androidx.viewpager.widget.ViewPager
            android:layout_width="301.87dp"
            android:layout_height="217.45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="56.56dp"
            android:layout_marginTop="162dp"
            android:background="@drawable/gambarlogin1" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="374dp"
            android:layout_height="63dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="429dp"
            android:background="@drawable/kolom"
            android:hint="Email / ID karyawan"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="374dp"
            android:layout_height="63dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="512dp"
            android:background="@drawable/kolom"
            android:hint="Masukan Kata Sandi"
            android:inputType="textPassword"
            android:paddingStart="20dp" />

        <ImageView
            android:id="@+id/imgeye"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="345dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="525dp"
            android:background="@drawable/eyefill" />


        <View
            android:id="@+id/btnmasuk"
            android:layout_width="374dp"
            android:layout_height="63dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="617dp"
            android:background="@drawable/img"
            android:onClick="@id/btnmasuk" />

        <TextView
            android:id="@+id/lupa_kata_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnmasuk"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:lineSpacingExtra="-4sp"
            android:text="@string/lupa_kata_s"
            android:textAppearance="@style/lupa_kata_s"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tvbelummempunyaiakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lupa_kata_s"
            android:layout_alignBaseline="@+id/tvdaftar"
            android:layout_alignBottom="@+id/tvdaftar"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:lineSpacingExtra="-1sp"
            android:text="@string/belum_mempunyai_akun"
            android:textAppearance="@style/belum_mempunyai_akun"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tvdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lupa_kata_s"
            android:layout_alignEnd="@+id/lupa_kata_s"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            android:lineSpacingExtra="-1sp"
            android:onClick="@+id/daftar"
            android:paddingStart="20dp"
            android:text="@string/daftar_sekarang"
            android:textAppearance="@style/daftar_sekarang"
            android:textColor="@color/red"
            android:textSize="14dp" />

    </RelativeLayout>


</ScrollView>